vlib/v/checker/tests/option_map_or_unwrap_user_clone_default_err.vv
// Only the builtin map `clone`/`move` produce fresh storage. A user-defined
// method named `clone` that returns a stored map is not fresh, so
// `x := opt or { holder.clone() }` would alias `holder.m` and observe later
// mutations. Such a call must keep the map-copy guard (the exemption checks the
// receiver is a map, not just the method name). See vlang/v issue #27867.
fn maybe_none() ?map[string]int {
	return none
}

struct Holder {
mut:
	m map[string]int
}

fn (h Holder) clone() map[string]int {
	return h.m
}

fn main() {
	mut holder := Holder{
		m: {
			'x': 1
		}
	}
	opt := maybe_none()
	x := opt or { holder.clone() }
	holder.m['x'] = 2
	println(x)
}
